@@ -1,3 +1,7 @@
+2003-05-12  Jacob Smullyan  <smulloni@smullyan.org>
+
+	* SkunkWeb/sw.conf.in: added comment about runInForeground.
+
 2003-05-09  Jacob Smullyan  <smulloni@smullyan.org>
 
 	* SkunkWeb/Services/templating/SendmailTag.py
